--- a/website/configuration.json
+++ b/website/configuration.json
@@ -1,6 +1,7 @@
 {
   "theme": "default",
-  "title": "Static Website Generator",
+  "title": "Koala",
+  "subtitle": "Static Website Generator",
   "description": "A simple static website generator",
   "url": "https://www.koalaspace.com/",
   "menu": {
