--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Koala - Static Website Generator",
   "main": "bin/index.js",
   "scripts": {
-    "start": "node bin/index.js"
+    "start": "node bin/index.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --fix --ext .js"
   },
   "repository": {
     "type": "git",
@@ -29,7 +33,9 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jest": "^23.17.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.0.1",
     "prettier": "^2.0.5",
     "prettier-eslint-cli": "^5.0.0"
   }
