--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint . --ext .js",
-    "lint:fix": "eslint . --fix --ext .js",
-    "serve": "serve dist"
+    "lint:fix": "eslint . --fix --ext .js"
   },
   "files": [
     "bin",
