--- a/website/configuration.json
+++ b/website/configuration.json
@@ -4,7 +4,7 @@
   "subtitle": "Static Website Generator",
   "description": "A simple static website generator",
   "keywords": ["website", "generator"],
-  "url": "https://www.koalaspace.com",
+  "url": "https://www.example.com",
   "websitePath": "/",
   "menu": [
     {
