--- a/website/configuration.json
+++ b/website/configuration.json
@@ -10,6 +10,10 @@
     {
       "name": "About",
       "link": "/about.html"
+    },
+    {
+      "name": "RSS",
+      "link": "/feed.rss.xml"
     }
   ],
   "dateFormat": "d MMMM yyyy",
