--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
   },
   "homepage": "https://github.com/NewTownData/koala-webgen#readme",
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
     "date-fns": "^2.21.3",
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "joi": "^17.11.0"
   },
   "devDependencies": {
     "eslint": "^8.8.0",
